[package]
name = "sup"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "2.4.1"
volatile = "0.3"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }


[profile.release]
debug = true
